orm-tests/tests/snapshots/geometry__geom_collection.snap
---
source: orm-tests/tests/geometry.rs
expression: geom
---
TestGeometrycollection {
    id: SurrealId(
        Thing {
            tb: "test_geometrycollection",
            id: Number(
                32,
            ),
        },
        PhantomData<geometry::TestGeometrycollection>,
        PhantomData<i32>,
    ),
    home_geometrycollection: [
        GeometryCollection(
            Point(
                Point(
                    Coord {
                        x: 0.0,
                        y: 0.0,
                    },
                ),
            ),
        ),
        GeometryCollection(
            LineString(
                LineString(
                    [
                        Coord {
                            x: 1.0,
                            y: 1.0,
                        },
                        Coord {
                            x: 2.0,
                            y: 2.0,
                        },
                    ],
                ),
            ),
        ),
    ],
}
