orm-tests/tests/snapshots/geometry__linestring.snap
---
source: surreal_orm-tests/tests/geometry.rs
expression: geom
---
TestLinestring {
    id: SurrealId(
        Thing {
            tb: "test_linestring",
            id: Number(
                32,
            ),
        },
        PhantomData<geometry::TestLinestring>,
        PhantomData<i32>,
    ),
    home_linestring: LineString(
        [
            Coord {
                x: -122.33583,
                y: 47.60621,
            },
            Coord {
                x: -122.33583,
                y: 47.60622,
            },
            Coord {
                x: -122.33584,
                y: 47.60622,
            },
            Coord {
                x: -122.33584,
                y: 47.60621,
            },
            Coord {
                x: -122.33583,
                y: 47.60621,
            },
        ],
    ),
}
