orm-tests/tests/snapshots/geometry__multipolygon.snap
---
source: surreal-orm-tests/tests/geometry.rs
expression: geom
---
TestMultipolygon {
    id: SurrealId(
        Thing {
            tb: "test_multipolygon",
            id: Number(
                32,
            ),
        },
        PhantomData<geometry::TestMultipolygon>,
        PhantomData<i32>,
    ),
    home_multipolygon: MultiPolygon(
        [
            Polygon {
                exterior: LineString(
                    [
                        Coord {
                            x: 0.0,
                            y: 0.0,
                        },
                        Coord {
                            x: 1.0,
                            y: 1.0,
                        },
                        Coord {
                            x: 2.0,
                            y: 2.0,
                        },
                        Coord {
                            x: 0.0,
                            y: 0.0,
                        },
                    ],
                ),
                interiors: [],
            },
            Polygon {
                exterior: LineString(
                    [
                        Coord {
                            x: 3.0,
                            y: 3.0,
                        },
                        Coord {
                            x: 4.0,
                            y: 4.0,
                        },
                        Coord {
                            x: 5.0,
                            y: 5.0,
                        },
                        Coord {
                            x: 3.0,
                            y: 3.0,
                        },
                    ],
                ),
                interiors: [],
            },
            Polygon {
                exterior: LineString(
                    [
                        Coord {
                            x: -111.0,
                            y: 45.0,
                        },
                        Coord {
                            x: -111.0,
                            y: 41.0,
                        },
                        Coord {
                            x: -104.0,
                            y: 41.0,
                        },
                        Coord {
                            x: -104.0,
                            y: 45.0,
                        },
                        Coord {
                            x: -111.0,
                            y: 45.0,
                        },
                    ],
                ),
                interiors: [
                    LineString(
                        [
                            Coord {
                                x: -110.0,
                                y: 44.0,
                            },
                            Coord {
                                x: -110.0,
                                y: 42.43,
                            },
                            Coord {
                                x: -105.0,
                                y: 42.0,
                            },
                            Coord {
                                x: -105.0,
                                y: 44.0,
                            },
                            Coord {
                                x: -110.0,
                                y: 44.0,
                            },
                        ],
                    ),
                ],
            },
        ],
    ),
}
